2006-06-02  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpparasite.[ch]: hide the GimpParamSpecParasite
	struct like we do with other custom param specs.

2006-06-02  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.[ch]
	* libgimp/gimp.def: removed gimp_use_cpu_accel() again. libgimp
	handles this transparently by calling gimp_cpu_accel_set_use().

2006-06-02  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite.c (gimp_composite_use_cpu_accel):
	need to test for GIMP_COMPOSITE_OPTION_NOEXTENSIONS.

	* libgimp/gimp.c (gimp_config): call gimp_cpu_accel_set_use() from
	here, not in gimp_main().

	* plug-ins/common/sel_gauss.c: applied patch from Loren Merritt
	that adds MMX code to boost the plug-in speed (bug #342860).

2006-06-02  Sven Neumann  <sven@gimp.org>

	Moved the CPU detection code to libgimpbase (see bug #342860):

	* app/base/Makefile.am
	* app/base/cpu-accel.[ch]
	* app/base/test-cpu-accel.c: removed here...

	* libgimpbase/Makefile.am
	* libgimpbase/gimpbase.h
	* libgimpbase/gimpcpuaccel.[ch]

	* libgimpbase/test-cpu-accel.c: ... and added here again with
	some API changes.

	* app/composite/Makefile.am
	* app/composite/make-installer.py: changed accordingly.

	* app/composite/gimp-composite-*-installer.c: regenerated.

	* libgimp/gimp.c (gimp_main): call gimp_set_use_cpu_accel().

	* libgimpbase/gimpbase.def: updated.

2006-06-01  Michael Natterer  <mitch@gimp.org>

	* cursors/Makefile.am
	* cursors/modifier-bad.png
	* cursors/xbm/modifier-bad-mask.xbm
	* cursors/xbm/modifier-bad.xbm: new "bad" cursor modifier.
	Replaces the "bad" cursor.

	* cursors/gimp-tool-cursors.xcf: added it here too.

	* app/widgets/widgets-enums.h: added GIMP_CURSOR_MODIFIER_BAD.

	* app/widgets/gimpcursor.c: add the bad modifier. Leave the bad
	cursor there for now.

	* app/display/gimpdisplayshell-callbacks.c
	* app/tools/gimpaligntool.c
	* app/tools/gimpblendtool.c
	* app/tools/gimpbycolorselecttool.c
	* app/tools/gimpclonetool.c
	* app/tools/gimpcolortool.c